# fanda-api-rust

./: .env  Cargo.toml  cargo-watch.txt  fanda.db  fanda.db-wal  readme.txt  schema.sql
rest/: roles.http  users.http
sql-scripts/: 0001-Seed.sql  DeleteTables.sql  Org-Seed.sql  fanda-original.dbdiagram  fanda.dbdiagram  fanda.sql  recursive-cte.sql
sqlite/: fanda.db-shm
src/: main.rs
src/helpers/: crypto.rs  mod.rs
src/roles/: model.rs  routes.rs
src/users/: model.rs  routes.rs
