[package]
name = "fanda-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "postgres"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0"
futures = "0.3.13"